--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.38",
+    "typescript": "^5.3.2"
   }
 }
